2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3335175, www.calstone.com renders as blank.  The fix is to deliberately
	introduce an error into our HTML parsing code that causes us to honor self-closing
	XML-style <script/> tags.  This matches Mozilla and Opera behavior (both of them
	have this bug), but it does not match WinIE.
	
        Reviewed by mjs

        * khtml/html/htmltokenizer.cpp:

2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3286229, popup menu misplaced.  <form> needs to be allowed as a child of
	<h1>-<h6> tags.  All other browsers allow this.
	
        Reviewed by darin

        * khtml/html/dtd.cpp:

2003-08-26  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - re-fixed 3366542 -- filename with non-ASCII name left out of Content-Disposition for <input type=file>

        * khtml/html/html_formimpl.cpp: (HTMLFormElementImpl::formData): Added missing # sign.

2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3394107, make sure the display mutation code doesn't mutate objects with
	display: none set.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-08-22  David Hyatt  <hyatt@apple.com>

	Fix for 3388363, copying a word in a list item copied too much.  The code that checked
	for the bullet would add in too much text sometimes.
	
        Reviewed by john

        * kwq/KWQKHTMLPart.mm:
        (isTextFirstInListItem):
        (KWQKHTMLPart::attributedString):

2003-08-21  Darin Adler  <darin@apple.com>

        * Makefile.am: Work around DLCFN issue to prevent constant churn of config.h.
        * config.h: Regenerated without DLCFN.

2003-08-21  Darin Adler  <darin@apple.com>

        * khtml/khtmlview.h: Formatting tweak.

2003-08-21  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3386673>: a particular fidelity.com "Log in" link does nothing because of cross-domain JavaScript rules

        Reviewed by mjs.

        * config.h:
        * khtml/ecma/kjs_window.cpp: